--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -5,31 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ropa de bebes</title>
-    <link rel="stylesheet" href="../style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+     crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../imagenes/petit favicon.jpg" type="image/x-icon">
 </head>
 <body>
-    <header>
-    
-    <nav class="nav">
-        <img class="logo" src="../imagenes/logopetit.jpg" alt="logo petit" title="logo petit">
+       <!-- inicio nav bs -->
+  <nav class="navbar navbar-expand-lg"  
+  id="botonera">
+ 
+ <div class="container">       
+  <a class="navbar-brand" href="../index.html" target="_blank">
+     <img src="../imagenes/petitlogo2.jpg" class="rounded" alt="logo pettit">
+  </a>
+   <button class="navbar-toggler" type="button" 
+   data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+     <span class="navbar-toggler-icon"></span>
+   </button>
+  
+   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+       <li class="nav-item">
+         <a class="nav-link" aria-current="page" href="contacto.html" target="_blank">Contacto</a>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link" href="./tienda.html" target="_blank">Tienda</a>
+       </li>
+     </ul>
+     <form class="d-flex" role="search">
+       <input class="form-control m-3" type="search" placeholder="Buscar" aria-label="Search">
+       <button class="btn btn-light" type="submit"></button>
+     </form>
 
-        <ul class="menu"> 
-            <li class="menu__item active">
-                        <a href="../pages/inicio.html" target="_blank">Inicio</a>
-            </li>
-            <li class="menu__item">
-                        <a href="../pages/contacto.html" target="_blank">Contacto</a>
-            </li>
-            <li class="menu__item">
-                        <a href="../pages/busqueda.html" target="_blank">Busqueda</a>
-            </li>
-            <li class="menu__item">
-                        <a href="../pages/carrito.html" target="_blank">Carrito</a>
-            </li>
-        </ul>
+   </div>
 
-    </nav>
+</nav>
+<!-- fin nav bs -->
+
     
 <footer class="footer">
 
