--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -45,38 +45,40 @@
 </nav>
 <!-- fin nav bs -->
 
-    
-<footer class="footer">
-
-    <div>
+<footer id="redes">
+  <div class="r-A">
         <a href="https://www.instagram.com/petit_boutiqueinfantil/" target="_blank">
         <img class="footer__img" src="../imagenes/ig.jpg" alt="logo ig">
         </a>
     </div>
-
-    <div>
+  
+    <div class="r-B">
         <a href="https://www.facebook.com/PetitBoutiqueInfantil022" target="_blank">        
         <img class="footer__img " src="../imagenes/logofacebook.jpg" alt="logo facebook">  
         </a>
     </div>
 
-    <div>
+    <div class="r-C">
         <a href="./pages/contacto.html" target="_blank">
         <img class="footer__img" src="../imagenes/contacto.jpg" alt="logo contacto">
         </a>
     </div>  
 
-    <div>
+    <div class="r-D">
         <a href="https://petitboutiqueinfantil.mercadoshops.com.ar/" target="_blank">
-            <img class="footer__img" src="../imagenes/mercadoshps.png" alt="logo mercadoshops">
+        <img class="footer__img" src="../imagenes/mercadoshps.png" alt="logo mercadoshops">
         </a>
     </div>
+ 
+  <section>
 
     <p>
-        Copyright2023-Petit Todos los derechos reservados
+        Copyright2023-Petit Derechos reservados
     </p>
-    
+  </section>
 </footer>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>   
 </body>
 </html>
